# InkSky

./: README.md  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: main.yml
src/: App.vue
src-spacetime/: Cargo.toml
src-spacetime/src/: lib.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/network/: mod.rs
src-tauri/src/network/bindings/: change_message_reducer.rs  change_name_reducer.rs  chat.rs  create_chat_reducer.rs  credentials.rs  delete_account_reducer.rs  login_reducer.rs  message.rs  mod.rs  register_reducer.rs  send_message_reducer.rs  session.rs  user.rs
src/assets/: main.css
src/components/: Login.vue  Register.vue
src/views/: main.vue
